# go-kart-platform

./: .gitignore  .gitmodules  CONSTRAINTS.md  CONTEXT.md  Makefile.test  README.md  SUMMARY.md  TERMINAL.md  TESTING.md  TODO.md  WORKFLOWS.md  animation_completion_summary.md  platformio.ini  run_telemetry_system.sh  send_realtime_frame.py  telemetry.db  test_animation.py  test_animation.sh  test_animation_direct.py  test_binary_led_animation.py  test_binary_led_animation_standalone.py  test_led_animation.cpp  test_protocol_registry.py
.cursor/rules/: devices.mdc  docs.mdc  go-kart-platform.mdc  remote-devices.mdc
.github/workflows/: build-can-interface.yml
components/: platformio.ini
components/common/lib/CrossPlatformCAN/: CANInterface.cpp  CANInterface.h  CMakeLists.txt  ProtobufCANInterface.cpp  ProtobufCANInterface.h  README.md  build.sh  build_and_run_test.sh  c_api.cpp  c_api.h  deploy_to_pi.sh  libcaninterface.dylib  raspi_build.sh  run_test.sh  test_led_animation.cpp
components/common/lib/CrossPlatformCAN/examples/: Makefile  basic_example.py  compile_test.sh  header_test.cpp  run_tests.sh  socket_direct_test.py  status_handler_test.py
components/common/lib/CrossPlatformCAN/examples/arduino_example/: arduino_example.ino
components/common/lib/CrossPlatformCAN/examples/rpi_example/: rpi_example.cpp
components/common/lib/CrossPlatformCAN/include/: batteries.pb.h  common.pb.h  lights.pb.h  motors.pb.h  navigation.pb.h  sensors.pb.h  system_monitor.pb.h
components/common/lib/CrossPlatformCAN/python/: __init__.py  can_interface.py  test_can_interface.py
components/common/lib/CrossPlatformCAN/test/: CMakeLists.txt  Makefile  MockCANInterface.h  README.md  TestProtobufCANInterface.h  test_animation_protocol.cpp  test_binary_data.cpp  test_can_interface.cpp  test_message_type_handlers.cpp  test_protobuf_can.cpp  test_protobuf_interface.cpp  test_raw_message_handling.cpp
components/common/lib/ProtobufCANInterface/: CMakeLists.txt  README.md  build.sh  library.json  prepare_includes.sh  test_can_interface
components/common/lib/ProtobufCANInterface/src/: ProtobufCANInterface.cpp  ProtobufCANInterface.h  main.cpp
components/common/lib/ProtobufCANInterface/test/: test_can_interface.cpp  test_can_interface.py
components/common/scripts/: component_builder.py
components/controls/: README.md  platformio.ini
components/controls/include/: Config.h
components/controls/src/: main.cpp
components/inputs/src/: main.cpp
components/lights/: README.md  platformio.ini
components/lights/include/: AnimationProtocol.h  Config.h  LightConstants.h
components/lights/src/: AnimationProtocol.cpp  kart_protocol.h  main.cpp
components/lights/test/: test_animation.cpp  test_animation_protocol.cpp  test_lighting.cpp
components/motors/: CMakeLists.txt  README.md  platformio.ini
components/motors/include/: Config.h
components/motors/src/: main.cpp
components/motors/test/: BasicControllerTest.cpp  MotorControllerTest.cpp  README.md  platformio.ini
components/navigation/: README.md  platformio.ini
components/navigation/include/: Config.h
components/navigation/src/: main.cpp
components/sensors/src/: Sensor.h  SensorManager.h  SensorProtocol.h  SensorRegistry.h  main.cpp
components/sensors/variants/: RpmSensor.h  TemperatureSensor.h
dashboard/server/: README.md  __init__.py  app.py  requirements.txt  run_tests.py  setup.py  test_protocol.py
dashboard/server/animations/: temporary_animation_e1af1fc1.json  test_animation_8b415a99.json
dashboard/server/api/: __init__.py  animations.py  commands.py  direct_commands.py  endpoints.py  protocol.py  telemetry.py
dashboard/server/lib/: __init__.py  can_interface.py  protocol.py  telemetry.py
dashboard/server/templates/: animation_editor.html  animations.html  index.html  protocol.html  telemetry_stream.html
dashboard/server/test/: __init__.py  conftest.py  run_tests_on_rpi.sh  test_animation_frontend.py  test_animation_protocol.py  test_animations.py  test_protocol.py  test_raw_message_handling.py
docs/: protocol.md
docs/protocol/: protocol.md
hardware/components/kunray_my1020/: README.md
lib/can/: protocol_registry.py
protocol/: batteries.proto  build.sh  common.proto  controls.proto  kart.proto  kart_protocol.proto  lights.proto  motors.proto  navigation.proto  sensors.proto  system_monitor.proto
protocol/protocols/: controls.proto
shared/: __init__.py
shared/lib/: __init__.py
shared/lib/python/: __init__.py  setup.py
tasks/: TASK_ANIMATION_INTEGRATION.md  TASK_System_Health_Monitoring.md  TASK_TELEMETRY_COLLECTOR.md  TASK_Telemetry_Dual_Store.md  TASK_Telemetry_Uplink.md  TASK_implement_motors_component.md  TASK_implement_sensors_component.md
tasks/animation-pipeline/: ANIMATION_PIPELINE.md  DESIGN.md
tasks/low-voltage-power-distribution/: COMPONENTS.md  LOW_VOLTAGE_POWER_DISTRIBUTION.md
tasks/low-voltage-power-distribution/images/: lm317t_circuit.html
telemetry/collector/: api.py  collector.py  config.ini  config_remote.ini  config_vehicle.ini  ping_broadcaster.py  requirements.txt  storage.py  telemetry.db  uplink_manager.py
tools/analysis/: db_stats_monitor.py
tools/animations/: animator.html  schema.json  test_rainbow_chase_b09dbcfb.json
tools/animations/car/: car.py  headlight_drl.json  headlight_fog.json  headlight_hazard.json  headlight_high_beam.json  headlight_left_turn.json  headlight_low_beam.json  headlight_off.json  headlight_right_turn.json  headlight_welcome.json  taillight_brake.json  taillight_brake_left_turn.json  taillight_brake_pulse.json  taillight_brake_reverse.json  taillight_brake_right_turn.json  taillight_fog.json  taillight_hazard.json  taillight_left_turn.json  taillight_off.json  taillight_reverse.json  taillight_right_turn.json  taillight_running.json  taillight_scanning.json
tools/animations/club-beat/: club-beat.py  drum_and_bass.json  house_beat.json  techno_beat.json
tools/animations/fire/: animation.json  (+2 more)
tools/diagnostics/: README.md  can_monitor.py  requirements.txt  simulate_can_data.py  telemetry_viewer.py  test_imports.py
(+135 files in other folders)
